feat(Code): Implement Document and Video handlers

--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -6,10 +6,13 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.username=userok
 spring.rabbitmq.password=password
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/telegram_bot_node
 spring.datasource.username=newuser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
+bot.token=7298031839:AAGX_4ed8We0aphY9yyMnVl7ZEyGd-XKXMc
+service.file.info.uri=https://api.telegram.org/bot{bot.token}/getFile?file_id={fileId}
+service.file_storage.uri=https://api.telegram.org/file/bot{bot.token}/{filePath}
