feat(Code): \nWhat: hashing ids in link for downloding.\nWhere: common-utils module. Refactor FileServices in node and rest modules.\nWhy: for security

--- a/node/pom.xml
+++ b/node/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>bursa</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>bursa</groupId>
             <artifactId>common_rabbit_mq</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
