--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.show-sql=true
 bot.token=7298031839:AAGX_4ed8We0aphY9yyMnVl7ZEyGd-XKXMc
 service.file.info.uri=https://api.telegram.org/bot{bot.token}/getFile?file_id={fileId}
 service.file_storage.uri=https://api.telegram.org/file/bot{bot.token}/{filePath}
+
+link.address=127.0.0.1:8086
+salt=zxcjSAd123ZSDnjJSAdxzc2as2asda2fdscxvb
