--- a/node/pom.xml
+++ b/node/pom.xml
@@ -49,6 +49,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+        <dependency>
             <groupId>bursa</groupId>
             <artifactId>common-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
