feat(Code): Refactoring Notificaiton_service module

--- a/notifications_service/pom.xml
+++ b/notifications_service/pom.xml
@@ -17,6 +17,10 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+        <dependency>
             <groupId>bursa</groupId>
             <artifactId>common_jpa</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -47,6 +51,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 </project>
