--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.username=userok
 spring.rabbitmq.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/telegram_bot_node
 spring.datasource.username=newuser
 spring.datasource.password=password
