--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=dispatcher
-server.port=8084
+server.port=${DISPATCHER_PORT:8084}
 
-spring.rabbitmq.port=5672
-spring.rabbitmq.host=localhost
-spring.rabbitmq.username=userok
-spring.rabbitmq.password=password
+spring.rabbitmq.port=${RABBIT_PORT:localhost}
+spring.rabbitmq.host=${RABBIT_HOST:5672}
+spring.rabbitmq.username=${RABBIT_USERNAME:userok}
+spring.rabbitmq.password=${RABBIT_PASSWORD:password}
 
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/telegram_bot_node}
+spring.datasource.username=${MYSQL_USER:newuser}
+spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
+spring.jpa.show-sql=${DB_SHOW_SQL:true}
+spring.jpa.database-platform=${DB_DIALECT:org.hibernate.dialect.MySQLDialect}
 server.ssl.enabled=false
+
+bot.token=${TG_BOT_TOKEN:7298031839:AAGX_4ed8We0aphY9yyMnVl7ZEyGd-XKXMc}
