--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,6 +193,7 @@ services:
     image: mysql/mysql-server:latest
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - ${DB_PORT_MAPPING}
     environment:
