--- a/notifications_service/src/main/resources/application.properties.example
+++ b/notifications_service/src/main/resources/application.properties.example
@@ -15,3 +15,21 @@ spring.jpa.database-platform=${DB_DIALECT}
 spring.quartz.job-store-type=${QUARTZ_STORE_TYPE}
 spring.quartz.jdbc.initialize-schema=${QUARTZ_INIT_SCHEME}
 org.quartz.jobStore.driverDelegateClass=${QUARTZ_DRIVER_DELEGATE}
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=never
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.dataSource=quartzDataSource
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.driver=${DB_DRIVER}
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.URL=${DB_URL}
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.user=${MYSQL_USER}
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.password=${MYSQL_PASSWORD}
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.maxConnections=5
+spring.quartz.properties.org.quartz.enabled=false
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.provider=hikaricp
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.maximumPoolSize=5
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.connectionTestQuery=SELECT 1
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.validationTimeout=5000
+spring.quartz.properties.org.quartz.dataSource.quartzDataSource.idleTimeout=0
+spring.quartz.properties.org.quartz.threadPool.threadCount=10
